[gd_scene load_steps=32 format=2]

[ext_resource path="res://UI/HealthUI.gd" type="Script" id=1]
[ext_resource path="res://UI/HeartUIEmpty.png" type="Texture" id=2]
[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=3]
[ext_resource path="res://DialogSystem/Fonts/m6x11.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/HealtBar/0.png" type="Texture" id=5]
[ext_resource path="res://UI/HealtBar/2.png" type="Texture" id=6]
[ext_resource path="res://UI/HealtBar/1.png" type="Texture" id=7]
[ext_resource path="res://UI/stamina/2.png" type="Texture" id=8]
[ext_resource path="res://UI/stamina/0.png" type="Texture" id=9]
[ext_resource path="res://UI/stamina/1.png" type="Texture" id=10]
[ext_resource path="res://UI/Indicadores/0.png" type="Texture" id=11]
[ext_resource path="res://UI/Indicadores/1.png" type="Texture" id=12]
[ext_resource path="res://UI/Indicadores/3.png" type="Texture" id=13]
[ext_resource path="res://UI/Indicadores/2.png" type="Texture" id=14]
[ext_resource path="res://Effects/CRTFrame.png" type="Texture" id=15]
[ext_resource path="res://UI/xpBar.png/2.png" type="Texture" id=16]
[ext_resource path="res://UI/xpBar.png/0.png" type="Texture" id=17]
[ext_resource path="res://UI/xpBar.png/1.png" type="Texture" id=18]
[ext_resource path="res://Music and Sounds/Effects/Orbs/LevelUP.wav" type="AudioStream" id=19]

[sub_resource type="Animation" id=1]
resource_name = "fadeout"

[sub_resource type="Animation" id=2]
resource_name = "green"
length = 0.55
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("UI/hearths/Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.475 ),
"transitions": PoolRealArray( 3.03143, 4.59479, 3.86375 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/hearths:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.475 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/hearths:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.175, 0.4, 0.55 ),
"transitions": PoolRealArray( 2.14355, 0.34151, 2.54912, 0.34151, 4.14106 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 1.1, 1.1 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.55
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("UI/hearths/Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.55 ),
"transitions": PoolRealArray( 1, 0.217638 ),
"update": 0,
"values": [ Color( 0.992157, 0.192157, 0.345098, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "HPanimBellow9"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("UI/hearths/Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 43.9899, -1.436 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/hearths/Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.714626, 0.714626 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "HPanimPlus10"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("UI/hearths/Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 42.959, -1.436 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/hearths/Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.648366, 0.727279 ) ]
}

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://DialogSystem/Fonts/m6x11.ttf"

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
antialiased = false
font_path = "res://DialogSystem/Fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=11]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 10 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[node name="HealthUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CRTFrame" type="Sprite" parent="."]
position = Vector2( 159.972, 90.1145 )
scale = Vector2( 0.296057, 0.221903 )
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeout = SubResource( 1 )
anims/green = SubResource( 2 )
anims/shake = SubResource( 3 )

[node name="NumSize" type="AnimationPlayer" parent="."]
anims/HPanimBellow9 = SubResource( 4 )
anims/HPanimPlus10 = SubResource( 5 )

[node name="UI" type="Node2D" parent="."]
position = Vector2( 0, 2.15906 )
scale = Vector2( 0.9, 0.9 )

[node name="hearths" type="Control" parent="UI"]
margin_left = 2.04272
margin_top = 5.82247
margin_right = 2.04272
margin_bottom = 5.82247
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HearthUI_empty" type="TextureRect" parent="UI/hearths"]
visible = false
margin_right = 75.0
margin_bottom = 16.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HearthUI_full" type="TextureRect" parent="UI/hearths"]
visible = false
margin_right = 72.0
margin_bottom = 17.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="UI/hearths"]
margin_left = 17.5899
margin_top = -0.448721
margin_right = 59.5899
margin_bottom = 18.5513
value = 50.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="UI/hearths"]
position = Vector2( 42.959, -1.436 )
scale = Vector2( 0.648366, 0.727279 )
__meta__ = {
"_edit_group_": true
}

[node name="HEARTS" type="Label" parent="UI/hearths/Node2D"]
margin_left = -33.6914
margin_top = 1.49171
margin_right = 1.30862
margin_bottom = 15.4917
rect_scale = Vector2( 1.36686, 1.36686 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "10/10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/hearths"]
margin_left = 5.9219
margin_top = 3.2648
margin_right = 45.9219
margin_bottom = 17.2648
theme = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stamina" type="Control" parent="UI"]
margin_left = 4.57555
margin_top = 23.5084
margin_right = 44.5755
margin_bottom = 63.5084
__meta__ = {
"_edit_use_anchors_": false
}

[node name="staminaCircle" type="TextureProgress" parent="UI/stamina"]
margin_left = 14.8606
margin_top = 4.0621
margin_right = 54.8606
margin_bottom = 44.0621
value = 100.0
texture_under = ExtResource( 10 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 8 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP2" type="Label" parent="UI/stamina"]
margin_left = 3.38907
margin_top = 7.73885
margin_right = 43.3891
margin_bottom = 21.7388
theme = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/stamina"]

[node name="Indicadores" type="Control" parent="UI"]
margin_left = 4.57555
margin_top = -0.217357
margin_right = 44.5755
margin_bottom = 39.7826
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Espada" type="TextureProgress" parent="UI/Indicadores"]
margin_left = 1.34306
margin_top = 50.3839
margin_right = 41.3431
margin_bottom = 90.3839
max_value = 1.0
value = 1.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inmortal" type="TextureProgress" parent="UI/Indicadores"]
margin_left = 17.8855
margin_top = 50.0991
margin_right = 57.8855
margin_bottom = 90.0991
max_value = 1.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Xp" type="Control" parent="UI/Indicadores"]
margin_left = 23.2259
margin_top = 39.8014
margin_right = 23.2259
margin_bottom = 39.8014
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="UI/Indicadores/Xp"]
margin_left = -20.9346
margin_top = 16.4171
margin_right = 29.0654
margin_bottom = 66.4171
rect_scale = Vector2( 0.9706, 0.9706 )
value = 100.0
texture_under = ExtResource( 16 )
texture_over = ExtResource( 17 )
texture_progress = ExtResource( 18 )

[node name="XP" type="Label" parent="UI/Indicadores/Xp"]
visible = false
margin_left = 12.0431
margin_top = 25.298
margin_right = 52.0431
margin_bottom = 46.298
rect_scale = Vector2( 0.807047, 0.807047 )
theme = SubResource( 12 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelUPSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
